k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multifish-service
  namespace: default
  labels:
    app: multifish
spec:
  type: ClusterIP
  selector:
    app: multifish
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
